idblu_tts_wrapper/k8s/release/deployment-ready-responses-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: idblu-tts-ready-responses
spec:
  template:
    metadata:
      labels:
        app.kubernetes.io/environment: release
    spec:
      nodeSelector:
        workload: accelerated
        accelerator: nvidia
      volumes:
        - name: model-cache
          persistentVolumeClaim:
            claimName: idblu-tts-model-cache-release
      containers:
        - name: idblu-tts
          image: 449678530532.dkr.ecr.ca-central-1.amazonaws.com/idblu-tts:release
