idblu_tts_wrapper/k8s/release/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: idblu-tts-private
  annotations:
    external-dns.alpha.kubernetes.io/hostname: idblu-tts-release.internal.account.idblu.com
spec:
  rules:
    - host: idblu-tts-release.internal.account.idblu.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: idblu-tts
                port:
                  number: 80
